SE/manifest/order-deploy.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: order
  namespace: wsi
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  replicas: 2
  selector:
    matchLabels:
      app: order
  template:
    metadata:
      labels:
        app: order
    spec:
      containers:
        - name: app
          image: 658986583341.dkr.ecr.ap-northeast-2.amazonaws.com/order
          ports:
            - containerPort: 8080
      priorityClassName: high-priority
      serviceAccountName: wsi-dynamo-irsa

---

apiVersion: v1
kind: Service
metadata:
  name: order
  namespace: wsi
  annotations:
    alb.ingress.kubernetes.io/healthcheck-path: /healthcheck
spec:
  type: NodePort
  selector:
    app: order
  ports:
    - port: 8080
      targetPort: 8080
