SE/manifest/product-deploy.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: product
  namespace: wsi
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  replicas: 2
  selector:
    matchLabels:
      app: product
  template:
    metadata:
      labels:
        app: product
    spec:
      tolerations:
        - key: type
          value: "app"
          effect: NoSchedule
          operator: Equal
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: nodeType
                    operator: In
                    values:
                      - app
      containers:
        - name: app
          image: 658986583341.dkr.ecr.ap-northeast-2.amazonaws.com/product
          ports:
            - containerPort: 8080
      priorityClassName: high-priority

---

apiVersion: v1
kind: Service
metadata:
  name: product
  namespace: wsi
  annotations:
    alb.ingress.kubernetes.io/healthcheck-path: /healthcheck
spec:
  type: NodePort
  selector:
    app: product
  ports:
    - port: 8080
      targetPort: 8080
