SE/manifest/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: product-network-policy
  namespace: wsi
spec:
  podSelector:
    matchLabels:
      app: product
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
      - ipBlock:
          cidr: 0.0.0.0/0
      ports:
        - protocol: TCP
          port: 8080
  egress:
    - to:
      - ipBlock:
          cidr: 0.0.0.0/0
      ports:
        - protocol: TCP
          port: 3307

---

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: customer-network-policy
  namespace: wsi
spec:
  podSelector:
    matchLabels:
      app: customer
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
      - ipBlock:
          cidr: 0.0.0.0/0
      ports:
        - protocol: TCP
          port: 8080
  egress:
    - to:
      - ipBlock:
          cidr: 0.0.0.0/0
      ports:
        - protocol: TCP
          port: 3307

---

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: order-network-policy
  namespace: wsi
spec:
  podSelector:
    matchLabels:
      app: order
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
      - ipBlock:
          cidr: 0.0.0.0/0
      ports:
        - protocol: TCP
          port: 8080
